{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 1012,
  "lineage": "c1579644-3cb2-e679-ee69-524d09fab895",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkInterfaces/ansible8214-c-vm-nic-1",
            "internal_domain_name_suffix": "3qv4szckhrkufdfg4i153br1rh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ansible8214-c-vm-internal1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansible8214-c-vm-pip-2",
                "subnet_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "ansible8214-c-vm-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "lab04s2"
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip_linux",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkInterfaces/ansible8214-c-vm-nic-2",
            "internal_domain_name_suffix": "3qv4szckhrkufdfg4i153br1rh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ansible8214-c-vm-internal2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansible8214-c-vm-pip-1",
                "subnet_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "ansible8214-c-vm-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "lab04s2"
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip_linux",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansible8214-c-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.128.88",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "ansible8214-c-vm-pip-1",
            "resource_group_name": "lab04s2",
            "sku": "Basic"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansible8214-c-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.63.98.221",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "ansible8214-c-vm-pip-2",
            "resource_group_name": "lab04s2",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg1",
            "location": "canadacentral",
            "name": "lab02-nsg1",
            "resource_group_name": "lab04s2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg2",
            "location": "canadacentral",
            "name": "lab02-nsg2",
            "resource_group_name": "lab04s2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1",
            "name": "lab02-subnet1",
            "resource_group_name": "lab04s2",
            "virtual_network_name": "lab02-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2",
            "name": "lab02-subnet2",
            "resource_group_name": "lab04s2",
            "virtual_network_name": "lab02-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1",
            "network_security_group_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg1",
            "subnet_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg1",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2",
            "network_security_group_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg2",
            "subnet_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "64e92bec-3c4a-4255-8ca6-f237fe863b8f",
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet",
            "location": "canadacentral",
            "name": "lab02-vnet",
            "resource_group_name": "lab04s2",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "win_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ansi8214-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/networkInterfaces/ansi8214-w-vm1-nic",
            "internal_domain_name_suffix": "3qv4szckhrkufdfg4i153br1rh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ansi8214-w-vm1-internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansi8214-w-vm1-pip",
                "subnet_id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "ansi8214-w-vm1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "lab04s2"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.windows.azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ansi8214-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1e80f2a1-36c1-4627-b38b-a70c248da824/resourceGroups/lab04s2/providers/Microsoft.Network/publicIPAddresses/ansi8214-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.63.99.221",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "ansi8214-w-vm1-pip",
            "resource_group_name": "lab04s2",
            "sku": "Basic"
          }
        }
      ]
    }
  ]
}